refactor(ui): map available statuses as dropdown options
