# baggage-tracker-ui/open-api/bt-api.client.ts
@@ -257,6 +257,108 @@ export class BaggageTrackerClient {
     }
 
     /**
+     * @return Success
+     */
+    passengerAllowedStatuses(): Observable<PlainResponse> {
+        let url_ = this.baseUrl + "/api/BaggageTracking/passenger-allowed-statuses";
+        url_ = url_.replace(/[?&]$/, "");
+
+        let options_ : any = {
+            observe: "response",
+            responseType: "blob",
+            headers: new HttpHeaders({
+                "Accept": "text/plain"
+            })
+        };
+
+        return this.http.request("get", url_, options_).pipe(_observableMergeMap((response_ : any) => {
+            return this.processPassengerAllowedStatuses(response_);
+        })).pipe(_observableCatch((response_: any) => {
+            if (response_ instanceof HttpResponseBase) {
+                try {
+                    return this.processPassengerAllowedStatuses(response_ as any);
+                } catch (e) {
+                    return _observableThrow(e) as any as Observable<PlainResponse>;
+                }
+            } else
+                return _observableThrow(response_) as any as Observable<PlainResponse>;
+        }));
+    }
+
+    protected processPassengerAllowedStatuses(response: HttpResponseBase): Observable<PlainResponse> {
+        const status = response.status;
+        const responseBlob =
+            response instanceof HttpResponse ? response.body :
+            (response as any).error instanceof Blob ? (response as any).error : undefined;
+
+        let _headers: any = {}; if (response.headers) { for (let key of response.headers.keys()) { _headers[key] = response.headers.get(key); }}
+        if (status === 200) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            let result200: any = null;
+            let resultData200 = _responseText === "" ? null : JSON.parse(_responseText, this.jsonParseReviver);
+            result200 = PlainResponse.fromJS(resultData200);
+            return _observableOf(result200);
+            }));
+        } else if (status !== 200 && status !== 204) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            return throwException("An unexpected server error occurred.", status, _responseText, _headers);
+            }));
+        }
+        return _observableOf(null as any);
+    }
+
+    /**
+     * @return Success
+     */
+    personnelAllowedStatuses(): Observable<PlainResponse> {
+        let url_ = this.baseUrl + "/api/BaggageTracking/personnel-allowed-statuses";
+        url_ = url_.replace(/[?&]$/, "");
+
+        let options_ : any = {
+            observe: "response",
+            responseType: "blob",
+            headers: new HttpHeaders({
+                "Accept": "text/plain"
+            })
+        };
+
+        return this.http.request("get", url_, options_).pipe(_observableMergeMap((response_ : any) => {
+            return this.processPersonnelAllowedStatuses(response_);
+        })).pipe(_observableCatch((response_: any) => {
+            if (response_ instanceof HttpResponseBase) {
+                try {
+                    return this.processPersonnelAllowedStatuses(response_ as any);
+                } catch (e) {
+                    return _observableThrow(e) as any as Observable<PlainResponse>;
+                }
+            } else
+                return _observableThrow(response_) as any as Observable<PlainResponse>;
+        }));
+    }
+
+    protected processPersonnelAllowedStatuses(response: HttpResponseBase): Observable<PlainResponse> {
+        const status = response.status;
+        const responseBlob =
+            response instanceof HttpResponse ? response.body :
+            (response as any).error instanceof Blob ? (response as any).error : undefined;
+
+        let _headers: any = {}; if (response.headers) { for (let key of response.headers.keys()) { _headers[key] = response.headers.get(key); }}
+        if (status === 200) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            let result200: any = null;
+            let resultData200 = _responseText === "" ? null : JSON.parse(_responseText, this.jsonParseReviver);
+            result200 = PlainResponse.fromJS(resultData200);
+            return _observableOf(result200);
+            }));
+        } else if (status !== 200 && status !== 204) {
+            return blobToText(responseBlob).pipe(_observableMergeMap((_responseText: string) => {
+            return throwException("An unexpected server error occurred.", status, _responseText, _headers);
+            }));
+        }
+        return _observableOf(null as any);
+    }
+
+    /**
      * @param qrCodeData (optional) 
      * @return Success
      */
@@ -819,6 +921,42 @@ export class Flight implements IFlight {
 export interface IFlight {
     id?: number;
     flightNumber?: string | undefined;
+}
+
+export class PlainResponse implements IPlainResponse {
+    response?: any | undefined;
+
+    constructor(data?: IPlainResponse) {
+        if (data) {
+            for (var property in data) {
+                if (data.hasOwnProperty(property))
+                    (<any>this)[property] = (<any>data)[property];
+            }
+        }
+    }
+
+    init(_data?: any) {
+        if (_data) {
+            this.response = _data["response"];
+        }
+    }
+
+    static fromJS(data: any): PlainResponse {
+        data = typeof data === 'object' ? data : {};
+        let result = new PlainResponse();
+        result.init(data);
+        return result;
+    }
+
+    toJSON(data?: any) {
+        data = typeof data === 'object' ? data : {};
+        data["response"] = this.response;
+        return data;
+    }
+}
+
+export interface IPlainResponse {
+    response?: any | undefined;
 }
 
 export class QrCodeScanResponse implements IQrCodeScanResponse {
